--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
+    "css-loader": "5.0.1",
     "eslint": "7.13.0",
     "eslint-config-htmlacademy": "0.6.0",
-    "he": "1.2.0",
+    "style-loader": "2.0.0",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
@@ -21,8 +22,9 @@
     "node": "10"
   },
   "dependencies": {
-    "chart.js": "^2.9.4",
-    "chartjs-plugin-datalabels": "^0.7.0",
-    "dayjs": "1.9.5"
+    "chart.js": "2.9.4",
+    "chartjs-plugin-datalabels": "0.7.0",
+    "dayjs": "1.9.5",
+    "he": "1.2.0"
   }
 }
